# ChangeLog for x11-themes/fluxbox-styles-fluxmod
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/fluxbox-styles-fluxmod/ChangeLog,v 1.24 2005/06/14 10:33:08 ferdy Exp $

  14 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  alpha tasty, wrt bug #93210

  19 May 2005; Jan Brinkmann <luckyduck@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  stable on amd64 wrt #93210

  19 May 2005; Rene Nussbaumer <killerfox@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  Stable on hppa; bug #93210

  09 May 2005; Aron Griffis <agriffis@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  stable on ia64

  26 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  Stable on ppc.

  19 Feb 2005; Markus Rothe <corsair@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  Stable on ppc64

*fluxbox-styles-fluxmod-20050128 (18 Feb 2005)

  18 Feb 2005; Ciaran McCreesh <ciaranm@gentoo.org>
  fluxbox-styles-fluxmod-20050128.ebuild:
  x86, sparc stable

  01 Feb 2005; Ciaran McCreesh <ciaranm@gentoo.org>
  -fluxbox-styles-fluxmod-20040502.ebuild,
  -fluxbox-styles-fluxmod-20040809-r1.ebuild,
  fluxbox-styles-fluxmod-20040809.ebuild,
  -fluxbox-styles-fluxmod-20040912.ebuild,
  fluxbox-styles-fluxmod-20041024.ebuild:
  New version from upstream, updated HOMEPAGES, tidy out old versions.

  18 Dec 2004; Michael Hanselmann <hansmi@gentoo.org>
  fluxbox-styles-fluxmod-20041024.ebuild:
  Stable on ppc.

  10 Nov 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  fluxbox-styles-fluxmod-20041024.ebuild:
  sparc, x86 stable

  02 Nov 2004; Markus Rothe <corsair@gentoo.org>
  fluxbox-styles-fluxmod-20041024.ebuild:
  Stable on ppc64

*fluxbox-styles-fluxmod-20041024 (31 Oct 2004)

  31 Oct 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  +fluxbox-styles-fluxmod-20041024.ebuild:
  Bump

  25 Sep 2004; Ciaran McCreesh <ciaranm@gentoo.org>