@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/fluxbox-styles-fluxmod
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/fluxbox-styles-fluxmod/ChangeLog,v 1.24 2005/06/14 10:33:08 ferdy Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/fluxbox-styles-fluxmod/ChangeLog,v 1.25 2005/07/12 04:52:54 geoman Exp $
+
+  12 Jul 2005; Stephen P. Becker <geoman@gentoo.org>
+  fluxbox-styles-fluxmod-20050128.ebuild:
+  stable on mips
 
   14 Jun 2005; Fernando J. Pereda <ferdy@gentoo.org>
   fluxbox-styles-fluxmod-20050128.ebuild:
